0.0.4, fixed chart-svg overflow problem

--- a/charted.less
+++ b/charted.less
@@ -159,6 +159,10 @@
 		position:relative;
 		box-shadow:inset 0 0 0 1px @charted_border_color;
 		
+		.chart-svg {
+			overflow:hidden;
+		}
+		
 		.chart-pointinfo {
 			position:absolute;
 			background:#FFF;
